--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 *.h5 filter=lfs diff=lfs merge=lfs -text
+path_to_save/saved_model/variables/variables.data-00000-of-00001 filter=lfs diff=lfs merge=lfs -text
