add gitignore files

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ kaggle.json
 inputs/cherry_leaves_dataset/cherry-leaves/test
 inputs/cherry_leaves_dataset/cherry-leaves/train
 /workspace/mildew-detector/outputs/v1/trained_model_saved
+outputs/v1/trained_model.h5
+outputs/trained_model.h5
