--- a/.slugignore
+++ b/.slugignore
@@ -3,3 +3,4 @@ outputs/v1
 jupyter_notebooks
 inputs/cherry_leaves_dataset/cherry-leaves/test
 inputs/cherry_leaves_dataset/cherry-leaves/train
+.gitattributes
