add move h5 file

--- a/.slugignore
+++ b/.slugignore
@@ -5,3 +5,4 @@ inputs/cherry_leaves_dataset/cherry-leaves/test
 inputs/cherry_leaves_dataset/cherry-leaves/train
 .gitattributes
 outputs/v2
+/outputs/v3
